// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders snapshot correctly when user is logged in 1`] = `
<div
  className="header-wrapper"
>
  <Adapter
    className="header"
  >
    <NavBarMobile
      className="nav-bar-mobile"
    />
    <img
      alt="logo"
      className="logo"
      src="FoodStepsLogo.png"
    />
    <div
      className="nav-bar-desktop"
    >
      <NavBar
        mode="horizontal"
      />
    </div>
    <Dropdown
      className="avatar-dropdown"
      mouseEnterDelay={0.15}
      mouseLeaveDelay={0.1}
      overlay={
        <Menu
          className=""
          focusable={false}
          prefixCls="ant-menu"
          theme="dark"
        >
          <MenuItem
            onClick={[Function]}
          >
            Sign Out
          </MenuItem>
        </Menu>
      }
      placement="bottomLeft"
      prefixCls="ant-dropdown"
      trigger={
        Array [
          "click",
        ]
      }
    >
      <div
        className="avatar"
      >
        <Avatar
          icon="user"
          prefixCls="ant-avatar"
          shape="circle"
          size="default"
        />
        <span
          className="avatar-username"
        />
      </div>
    </Dropdown>
    <SignInSignUpModal
      closeModal={[Function]}
      isModalVisible={false}
      onUserLogin={undefined}
    />
  </Adapter>
</div>
`;

exports[`renders snapshot correctly when user is not logged in 1`] = `
<div
  className="header-wrapper"
>
  <Adapter
    className="header"
  >
    <NavBarMobile
      className="nav-bar-mobile"
    />
    <img
      alt="logo"
      className="logo"
      src="FoodStepsLogo.png"
    />
    <div
      className="nav-bar-desktop"
    >
      <NavBar
        mode="horizontal"
      />
    </div>
    <Button
      className="sign-up-button"
      ghost={false}
      loading={false}
      onClick={[Function]}
      prefixCls="ant-btn"
      type="primary"
    >
      Sign Up / Sign In
    </Button>
    <SignInSignUpModal
      closeModal={[Function]}
      isModalVisible={false}
      onUserLogin={undefined}
    />
  </Adapter>
</div>
`;
